[package]
name = "pay"
version = "0.0.1-alpha.1"
edition = "2021"
authors = ["dravenk <longxianwen@outlook.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/pay"
description = "Payment related SDK supports payment with cryptocurrencies, including Bitcoin, Solona, Kaspa, etc., as well as legal currency payment with commercial companies, such as Alipay Pay, wechat Pay, and PayPal."
repository = "https://github.com/dravenk/pay"
keywords = ["payment", "cryptocurrency", "bitcoin", "alipay", "wechat"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
openssl = "0.10"